--- a/README.Rmd
+++ b/README.Rmd
@@ -44,6 +44,50 @@ where $\Delta = \lbrace 1, 2 \rbrace$ represents a cause-of-death indicator.
 
 ## Introduction to pseudo-observations
 
+The following section serves as a fast introduction to pseudo-observations, which the methods of this package is based on. 
+
+For more detailed information, please see 
++ Andersen and Perme (_Pseudo-observations in survival analysis (2010)_) or 
++ Andersen, Klein and Rosthøj (_Generalised linear models for correlated pseudo-observations, with applications to multi-state models (2003)_)
+
+We wish to formulate a model for
+$$ 
+\theta = E(f(X))
+$$ 
+where $X=X_1, \ldots, X_n$ denotes a vector of survival times (or other survival data) for $n$ individuals and $f$ denotes some function. 
+
+An example would be $\theta = E(I(D^*>t)) = P(D^*>t)$. 
+
+Assume that a sufficiently nice estimator $\hat{\theta}$ of $\theta$ exists. 
+
+For a fixed time, $t \in [0, \tau]$, the pseudo-observation for the i'th individual at $t$ is given by 
+$$ 
+\hat{\theta}_i (t)= n \cdot \hat{\theta}(t) - (n-1) \cdot \hat{\theta}^{-i}(t)
+$$
+where $\hat{\theta}(t)$ denotes the estimate based on the total data set, and $\hat{\theta}^{-i}(t)$ denotes the estimate based on the same data set but omitting observations from individual i. 
+
+Since the survival times are subject to right-censoring, inference based on likelihood is adjusted to accommodate this. 
+
+
+However, since all subjects has a valid pseudo-observation, $\hat{\theta}_i (t)$, at one or more times, these can be used as an outcome variable in a generalised linear model. 
+
+Note, that this is regardless of the whether a subject is censored or died at time t. 
+
+Assume that $g$ denotes a link function, then we wish to fit
+
+$$
+g(E(f(X) \mid Z)) = \xi^T Z.
+$$
+Following, $f(X)$ is replaced by $\hat{\theta}_i (\cdot)$ in the model fit. 
+
+
+The model parameters, $\xi$, are estimated using generalised estimating equations, see Liang and Zeger (_Longitudinal data analysis using generalized linear models (1986)_. 
+
+This can accomodate the fact that each individual can have several pseudo-observations if more than one time point is used in the computation. 
+
+
+
+
 ## One-dimensional pseudo-observations 
 The one-dimensional pseudo-observations model is based on the parameter
 $$
@@ -71,10 +115,191 @@ where $\hat{C}_1(t)$ and $\hat{C}_2(t)$ are the Aalen-Johansen estimates of the 
 # Install package from GitHub
 
 
-```{r eval = FALSE}
+```{r eval = T, echo = T}
+require(devtools)
+
 devtools::install_github("JulieKFurberg/recurrentpseudo")
+
+require(recurrentpseudo)
 ```
 
+
+# Example - Bladder cancer data from survival package
+
+
+We consider the well-known bladder cancer data from the survival package.
+
+We focus on the comparison between placebo and thiotepa. 
+
+```{r cache = T}
+# Example: Bladder cancer data from survival package
+require(survival)
+
+# Make a three level status variable
+bladder1$status3 <- ifelse(bladder1$status %in% c(2, 3), 2, bladder1$status)
+
+# Add one extra day for the two patients with start=stop=0
+# subset(bladder1, stop <= start)
+bladder1[bladder1$id == 1, "stop"] <- 1
+bladder1[bladder1$id == 49, "stop"] <- 1
+
+# Restrict the data to placebo and thiotepa
+bladdersub <- subset(bladder1, treatment %in% c("placebo", "thiotepa"))
+
+# Make treatment variable two-level factor
+bladdersub$Z <- as.factor(ifelse(bladdersub$treatment == "placebo", 0, 1))
+levels(bladdersub$Z) <- c("placebo", "thiotepa")
+head(bladdersub)
+
+```
+
+
+One-dimensional pseudo-observations can be computed using the following code
+
+```{r cache = T}
+# Pseudo observations
+pseudo_bladder_1d <- pseudo.onedim(tstart = bladdersub$start,
+                                   tstop = bladdersub$stop,
+                                   status = bladdersub$status3,
+                                   id = bladdersub$id,
+                                   covar_names = "Z",
+                                   tk = c(20, 30, 40),
+                                   data = bladdersub)
+head(pseudo_bladder_1d$outdata)
+
+# GEE fit
+fit_bladder_1d <- pseudo.geefit(pseudodata = pseudo_bladder_1d,
+                                covar_names = c("Z"))
+fit_bladder_1d
+
+# Treatment differences
+xi_diff_1d <- as.matrix(c(fit_bladder_1d$xi[2] - fit_bladder_1d$xi[1]), ncol = 1)
+
+mslabels <- c("treat, mu")
+rownames(xi_diff_1d) <- mslabels
+colnames(xi_diff_1d) <- ""
+xi_diff_1d
+
+# Variance matrix for differences
+sigma_diff_1d <- matrix(c(fit_bladder_1d$sigma[1,1] + fit_bladder_1d$sigma[2,2]),
+                     ncol = 1, nrow = 1,
+                     byrow = T)
+
+rownames(sigma_diff_1d) <- colnames(sigma_diff_1d) <- mslabels
+sigma_diff_1d
+```
+
+
+
+Two-dimensional pseudo-observations can be computed using the following code
+
+```{r cache = T}
+# Pseudo observations
+pseudo_bladder_2d <- pseudo.twodim(tstart = bladdersub$start,
+                                   tstop = bladdersub$stop,
+                                   status = bladdersub$status3,
+                                   id = bladdersub$id,
+                                   covar_names = "Z",
+                                   tk = c(20, 30, 40),
+                                   data = bladdersub)
+head(pseudo_bladder_2d$outdata)
+
+# GEE fit
+fit_bladder_2d <- pseudo.geefit(pseudodata = pseudo_bladder_2d,
+                                covar_names = c("Z"))
+fit_bladder_2d
+
+# Treatment differences
+xi_diff_2d <- as.matrix(c(fit_bladder_2d$xi[2] - fit_bladder_2d$xi[1],
+                          fit_bladder_2d$xi[4] - fit_bladder_2d$xi[3]), ncol = 1)
+
+mslabels <- c("treat, mu", "treat, surv")
+rownames(xi_diff_2d) <- mslabels
+colnames(xi_diff_2d) <- ""
+xi_diff_2d
+
+
+# Variance matrix for differences
+sigma_diff_2d <- matrix(c(fit_bladder_2d$sigma[1,1] + fit_bladder_2d$sigma[2,2],
+                          fit_bladder_2d$sigma[1,3] + fit_bladder_2d$sigma[2,4],
+                          fit_bladder_2d$sigma[1,3] + fit_bladder_2d$sigma[2,4],
+                          fit_bladder_2d$sigma[3,3] + fit_bladder_2d$sigma[4,4]),
+                          ncol = 2, nrow = 2,
+                          byrow = T)
+
+rownames(sigma_diff_2d) <- colnames(sigma_diff_2d) <- mslabels
+sigma_diff_2d
+```
+
+Three-dimensional pseudo-observations can be computed using the following code
+
+```{r cache = T}
+# Add deathtype variable to bladder data
+# Deathtype = 1 (bladder disease death), deathtype = 2 (other death reason)
+bladdersub$deathtype <- with(bladdersub, ifelse(status == 2, 1, ifelse(status == 3, 2, 0)))
+table(bladdersub$deathtype, bladdersub$status)
+
+# Pseudo-observations
+pseudo_bladder_3d <- pseudo.threedim(tstart = bladdersub$start,
+                                     tstop = bladdersub$stop,
+                                     status = bladdersub$status3,
+                                     id = bladdersub$id,
+                                     deathtype = bladdersub$deathtype,
+                                     covar_names = "Z",
+                                     tk = c(20, 30, 40),
+                                     data = bladdersub)
+pseudo_bladder_3d
+
+# GEE fit
+fit_bladder_3d <- pseudo.geefit(pseudodata = pseudo_bladder_3d,
+                                covar_names = c("Z"))
+fit_bladder_3d
+
+# Treatment differences
+xi_diff_3d <- as.matrix(c(fit_bladder_3d$xi[2] - fit_bladder_3d$xi[1],
+                          fit_bladder_3d$xi[4] - fit_bladder_3d$xi[3],
+                          fit_bladder_3d$xi[6] - fit_bladder_3d$xi[5]), ncol = 1)
+
+mslabels <- c("treat, mu", "treat, cif1", "treat, cif2")
+rownames(xi_diff_3d) <- mslabels
+colnames(xi_diff_3d) <- ""
+xi_diff_3d
+
+
+# Variance matrix for differences
+sigma_diff_3d <- matrix(c(fit_bladder_3d$sigma[1,1] + fit_bladder_3d$sigma[2,2],
+                          fit_bladder_3d$sigma[1,3] + fit_bladder_3d$sigma[1,5],
+                          fit_bladder_3d$sigma[1,4] + fit_bladder_3d$sigma[1,6],
+
+                          fit_bladder_3d$sigma[1,3] + fit_bladder_3d$sigma[1,5],
+                          fit_bladder_3d$sigma[3,3] + fit_bladder_3d$sigma[4,4],
+                          fit_bladder_3d$sigma[3,5] + fit_bladder_3d$sigma[4,6],
+
+                          fit_bladder_3d$sigma[1,4] + fit_bladder_3d$sigma[1,6],
+                          fit_bladder_3d$sigma[3,5] + fit_bladder_3d$sigma[4,6],
+                          fit_bladder_3d$sigma[5,5] + fit_bladder_3d$sigma[6,6]
+
+                          ),
+                        ncol = 3, nrow = 3,
+                        byrow = T)
+
+rownames(sigma_diff_3d) <- colnames(sigma_diff_3d) <- mslabels
+sigma_diff_3d
+
+```
+
+
+```{r}
+###----------------------- Compare - should match for some elements ---------------------------###
+
+xi_diff_1d
+xi_diff_2d
+xi_diff_3d
+
+sigma_diff_1d
+sigma_diff_2d
+sigma_diff_3d
+```
 
 # Citation 
 To cite the `recurrentpseudo` package please use the following references,
